--- a/modules.cfg
+++ b/modules.cfg
@@ -3,3 +3,6 @@ type:          meteo
 logical_name:  meteo01
 serial_number: SERIALNUMBER
 location:      LOCATION
+temp_offset:   0.0
+hum_offset:    0.0
+press_offset:  0.0
