--- a/modules.cfg
+++ b/modules.cfg
@@ -6,3 +6,9 @@ location:      LOCATION
 temp_offset:   0.0
 hum_offset:    0.0
 press_offset:  0.0
+
+[buzzer01]
+type:          buzzer
+logical_name:  buzzer01
+serial_number: SERIALNUMBER
+location:      LOCATION
