indicate if temperature is below or above threshold with buzzer LEDs

--- a/modules.cfg
+++ b/modules.cfg
@@ -1,11 +1,13 @@
 [meteo01]
-type:          meteo
-logical_name:  meteo01
-serial_number: SERIALNUMBER
-location:      LOCATION
-temp_offset:   0.0
-hum_offset:    0.0
-press_offset:  0.0
+type:           meteo
+logical_name:   meteo01
+serial_number:  SERIALNUMBER
+location:       LOCATION
+temp_offset:    0.0
+hum_offset:     0.0
+press_offset:   0.0
+buzzer:         buzzer01
+temp_threshold: 35.0
 
 [buzzer01]
 type:          buzzer
