--- a/modules.cfg
+++ b/modules.cfg
@@ -9,6 +9,16 @@ press_offset:   0.0
 buzzer:         buzzer01
 temp_threshold: 35.0
 
+[meteo02]
+type:           meteo
+logical_name:   meteo02
+serial_number:  SERIALNUMBER
+location:       LOCATION
+temp_offset:    0.0
+hum_offset:     0.0
+press_offset:   0.0
+temp_threshold: meteo01
+
 [buzzer01]
 type:          buzzer
 logical_name:  buzzer01
